--- a/Test1.html
+++ b/Test1.html
@@ -9,7 +9,7 @@
     <meta name="description" content="yy...">
     <meta name="author" content="zz...">
     <title>SAU IoT DTI 2021</title>
-    <link rel="shortcut icon" href="./Images/gto-icon.png" type="image/xicon">
+    <link rel="shortcut icon" href="./Images/Vitorjapah-Anime-Dvd-Cases-Gto.ico" type="image/xicon">
 </head>
 <body>
     -- HTML Sybols --    
